Fix overlapping links on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -169,4 +169,5 @@ p.back_link {
 
 p.linkbar {
     text-align: right;
+    line-height: 40px;
 }
